--- a/css/phone.css
+++ b/css/phone.css
@@ -78,7 +78,7 @@ header .nextpage {
   top: 0;
   width: 100%;
   margin-top: 54px;
-  margin-right: 0;
+  margin-right: -20%;
   margin-left: auto;
   order: 2;
 }
